WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
170286
NetworkConnectionToWebProcess should stop web sockets when being destroyed
https://bugs.webkit.org/show_bug.cgi?id=170286
Summary
NetworkConnectionToWebProcess should stop web sockets when being destroyed
youenn fablet
Reported
2017-03-30 09:20:47 PDT
If the Web Process is crashing, we should stop all web socket networking
Attachments
Patch
(2.24 KB, patch)
2017-03-30 09:22 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2017-03-30 09:22:06 PDT
Created
attachment 305863
[details]
Patch
youenn fablet
Comment 2
2017-03-30 09:39:01 PDT
(In reply to youenn fablet from
comment #1
)
> Created
attachment 305863
[details]
> Patch
I did manual testing to ensure this patch is working. We should probably write a test for it, like a unit test which would access a web socket server.
Brady Eidson
Comment 3
2017-03-30 10:00:29 PDT
(In reply to youenn fablet from
comment #2
)
> (In reply to youenn fablet from
comment #1
) > > Created
attachment 305863
[details]
> > Patch > > I did manual testing to ensure this patch is working. > We should probably write a test for it, like a unit test which would access > a web socket server.
We currently don't have the ability to write unit tests (e.g. API tests) that utilize HTTP. We only have an httpd available in layout tests.
Brady Eidson
Comment 4
2017-03-30 12:39:14 PDT
Comment on
attachment 305863
[details]
Patch ALEX! I TOLD YOU TO MAKE SURE THIS DIDN'T HAPPEN!!!!!
WebKit Commit Bot
Comment 5
2017-03-30 13:09:09 PDT
Comment on
attachment 305863
[details]
Patch Clearing flags on attachment: 305863 Committed
r214616
: <
http://trac.webkit.org/changeset/214616
>
WebKit Commit Bot
Comment 6
2017-03-30 13:09:11 PDT
All reviewed patches have been landed. Closing bug.
Alex Christensen
Comment 7
2017-04-05 10:56:54 PDT
😳
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug