NetworkConnectionToWebProcess should stop web sockets when being destroyed https://bugs.webkit.org/show_bug.cgi?id=170286

Patch by Youenn Fablet <youenn@apple.com> on 2017-03-30
Reviewed by Brady Eidson.

* NetworkProcess/NetworkSocketStream.cpp:
(WebKit::NetworkSocketStream::~NetworkSocketStream): Stopping the socket handle if not done already.
* NetworkProcess/NetworkSocketStream.h:

Canonical link: https://commits.webkit.org/187212@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@214616 268f45cc-cd09-0410-ab3c-d52691b4dbfc